--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.2",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
