--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.2",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
     "query-string": "^9.1.1",
     "react": "^18.3.1",
@@ -25,6 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": [
       "react-app",
